--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -210,7 +210,6 @@
 				<option
 					class="opt"
 					value="<%= folder %>"
-					data-obj="<%= obj[folder] %>"
 					selected="<%=i==0?true:false%>"
 					data-year="<%= folder %>"
 				>
@@ -220,25 +219,15 @@
 			</select>
 
 			<!-- <div class="btngrp"><div class="prev-btn btn" data-year="2019">Previous Year</div><div data-year="2020" class="current-btn btn">Next Year</div></div> -->
-			<section class="galleryMain" data-total="500">
-				<% for( let i = 0; i < 500; i++ ) { %>
-				<div class="galleryItem">
-					<img
-						id="imageid"
-						src="../images/gallery/SAMPLE/img<%=i+1%>.jpg"
-						alt=""
-					/>
-				</div>
-				<% } %> <%# imgsArray[0].forEach((i)=> {%> <%# }) %>
-				<!-- <%# imgsArray[0].forEach(img => { %>
-         
-          <%# }) %> 
-          
-          <%# obj[2019].forEach(o => { %>
-            
-         
-        <%# }) %> -->
-			</section>
+			<section class="galleryMain"></section>
+			<div class="buttondiv mb-2">
+				<button type="button" class="btn btn-primary px-4 mx-1 prev" disabled>
+					Previous
+				</button>
+				<button type="button" disabled class="btn btn-primary px-4 mx-1 next">
+					&nbsp;&nbsp;Next&nbsp;&nbsp;
+				</button>
+			</div>
 
 			<div class="pagination">
 				<!-- <li class="page-item previous-page disable"><a class="page-link" href="#">prev</a></li>
@@ -279,7 +268,7 @@
 		<%- include('./layout/footer') %>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="javascripts/aboutus.js"></script>
-		<script src="javascripts/pagination.js"></script>
+		<!-- <script src="javascripts/pagination.js"></script> -->
 		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/common.js"></script>
 		<script src="javascripts/chatbot.js"></script>
