--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -887,7 +887,7 @@
 				<div class="hexBox">
 					<h1 class="hexTitle">REPEATERS</h1>
 					<p class="hexContent para1neet">
-						this course is meant for those who have completed their 12th class
+						This course is meant for those who have completed their 12th class
 						board exams and might have already attempted the NEET. They will
 						appear for NEET in the coming year after one year of training
 						focused on NEET.
