--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -56,7 +56,7 @@
 					creative human resources who are having sufficient knowledge, with
 					competitive edge, National Integrity and social responsibility and who
 					are the input for India's top Medical Engineering and professional
-					colleges. OUR MISSION
+					colleges.
 				</p>
 			</div>
 			<div class="ourmission">
