--- a/views/results.ejs
+++ b/views/results.ejs
@@ -48,27 +48,17 @@
 				class="form-select form-select-lg mb-3 dropdown"
 				aria-label=".form-select-lg example"
 				data-select=""
-				>
-					<% year.forEach((e,i) => { %>
-						<option value="<%= e %>" ><%= e %></option>
-					<% }) %>
-				
-			
-			  </select>
-			<span class="arrowRight">
+			>
+				<% year.forEach((e,i) => { %>
+				<option value="<%= e %>"><%= e %></option>
+				<% }) %>
+			</select>
+			<!-- <span class="arrowRight"> </span>
+			<span class="arrowLeft"> </span>
 
-			</span>
-			<span class="arrowLeft">
-
-			</span>
-
-			<div class="gridcontainer">
-				
-			</div> 
-			<div class="pagination">
-					
-			</div>
-		</section> 
+			<div class="gridcontainer"></div>
+			<div class="pagination"></div> -->
+		</section>
 
 		<%- include('./layout/footer') %>
 
