--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -19,7 +19,7 @@
 				<p class="methContent">
 					This course is meant for students who have completed their 10th std
 					board exams. The course will start at their 11th std and will be
-					conducted till their JEE exam. Course Methodology
+					conducted till their JEE exam.
 				</p>
 				<h1>Course Methodology</h1>
 				<ul>
