--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -904,7 +904,7 @@
 					<p class="hexContent para2neet">
 						This course is meant for students who have completed their 10th std
 						board exams. The course will start at their 11th std and will be
-						conducted till their NEET exam. Course Methodology
+						conducted till their NEET exam.
 					</p>
 					<button class="neet2btn">Read more</button>
 				</div>
