--- a/views/results.ejs
+++ b/views/results.ejs
@@ -10,6 +10,7 @@
 			href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
 		/>
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
+		<link rel="stylesheet" href="stylesheets/pagination.css" />
 
 		<title>Results</title>
 		<style>
@@ -58,6 +59,8 @@
 
 			<div class="gridcontainer"></div>
 			<div class="pagination"></div> -->
+			<div class="gridcontainer"></div>
+			<div id="pagination-container"></div>
 		</section>
 
 		<%- include('./layout/footer') %>
@@ -66,7 +69,16 @@
 			rel="stylesheet"
 			href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
 		/>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 		<script src="javascripts/results.js"></script>
 		<script src="javascripts/nav.js"></script>
