--- a/views/home.ejs
+++ b/views/home.ejs
@@ -80,7 +80,7 @@
 									<p>
 										Admissions open for NEET Repeater 2022 New batch <a href="/contactus">JOIN NOW
 										</a> &nbsp;
-										&ensp; Enroll yourself for NEET Repeater 2022 Scholarship Test
+										&ensp; Enroll yourself <a href="/contactus">ji</a> for NEET Repeater 2022 Scholarship Test
 										<a href="/contactus">JOIN NOW</a>&nbsp; &ensp; Admissions open for NEET/JEE
 										Long-term course (1year & 2 year)
 										!<a href="/contactus">JOIN NOW</a>
