--- a/views/home.ejs
+++ b/views/home.ejs
@@ -76,7 +76,8 @@
 
 							</div>
 							<div class="scroll">
-								<marquee class="marqueetext" vspace="30%" onmousedown="start();" onmouseup="stop();">
+								<marquee class="marqueetext" vspace="30%" scrollamount="5" scrollamount="5" onmouseover="this.stop();"
+								onmouseout="this.start();">
 									<p>
 										Admissions open for NEET Repeater 2022 New batch <a href="/contactus">JOIN NOW
 										</a> &nbsp;
@@ -244,7 +245,6 @@
 
 						<!-- <iframe class='ribbon' src="https://giphy.com/embed/3ohhwzIw3bISRhQWME" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/explosion-confetti-3ohhwzIw3bISRhQWME"></a></p> -->
 					</div>
-					<marquee behavior="" direction="left"></marquee>
 					<!-- <section class="swiper swiper1 mySwiper1">
 						<div class="swiper-wrapper">
 							<% ourtoppers.forEach(topper=> { %>
