--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="stylesheets/nav.css">
+<link rel="stylesheet" href="stylesheets/nav.css" />
 
 <header class="header-area">
 	<!-- site-navbar start -->
@@ -6,28 +6,50 @@
 		<div class="container1">
 			<nav class="site-navbar">
 				<!-- site logo -->
-				<a href="/" class="site-logo"><img draggable="false" class="site-logo-img"
-						src="images/home/logowbg2.png" alt=""></a>
+				<a href="/" class="site-logo"
+					><img
+						draggable="false"
+						class="site-logo-img"
+						src="images/home/logowbg2.png"
+						alt=""
+				/></a>
 				<!-- site menu/nav -->
-				<div  class="nav2" >
-				<ul>
-					<li><a class="even homenav" href="/">Home</a></li>
-					<li><a class="odd coursesnav" href="/#courses"><b>Courses</b></a></li>
-					<li><a class="even aboutusnav" href="/Aboutus"><b>About Us</b></a></li>
-					<li><a class="odd Demovideosnav" href="/Demovideos"><b>Demo Videos</b></a></li>
-					<li><a class="even successstoriesnav" href="/successstories"><b>Success Stories</b></a></li>
-					<li><a class="odd resultsnav" href="/results"><b>Results</b></a></li>
-					<li><a class="even contactusnav" href="/contactus"><b>Contact Us</b></a></li>	
-				</ul>
-				<span class="dark-mode-toggle"></span>
-				<button class="nav-toggler">
-					<span></span>
-				</button>
+				<div class="nav2">
+					<ul>
+						<li><a class="even homenav" href="/">Home</a></li>
+						<li>
+							<a class="odd coursesnav" href="/#courses"><b>Courses</b></a>
+						</li>
+						<li>
+							<a class="even aboutusnav" href="/Aboutus"><b>About Us</b></a>
+						</li>
+						<li>
+							<a class="odd Demovideosnav" href="/Demovideos"
+								><b>Demo Videos</b></a
+							>
+						</li>
+						<li>
+							<a class="even successstoriesnav" href="/successstories"
+								><b>Success Stories</b></a
+							>
+						</li>
+						<li>
+							<a class="odd resultsnav" href="/results"><b>Results</b></a>
+						</li>
+						<li>
+							<a class="even contactusnav" href="/contactus"
+								><b>Contact Us</b></a
+							>
+						</li>
+					</ul>
+					<span class="dark-mode-toggle"></span>
+					<button class="nav-toggler">
+						<span></span>
+					</button>
 				</div>
 				<!-- nav-toggler for mobile version only -->
-				
-				
 			</nav>
 		</div>
-	</div><!-- navbar-area end -->
+	</div>
+	<!-- navbar-area end -->
 </header>
