--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -52,7 +52,7 @@
 			<div class="ourvision">
 				<h1>OUR VISION</h1>
 				<p>
-					To be an Indian’s best training Institute to impart understanding and
+					To be India's best training Institute to impart understanding and
 					application-based education to the young talents and carving them into
 					creative human resources who are having sufficient knowledge, with
 					competitive edge, National Integrity and social responsibility and who
@@ -154,7 +154,6 @@
 
 			<section class="galleryMain"></section>
 			<div id="pagination-container"></div>
-		
 		</section>
 		<section class="app">
 			<div class="apppage">
