--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -127,7 +127,7 @@
 		<%- include('./layout/header') %>
 
 		<!--courses Neet-->
-		<section class="coursesneet">
+		<section class="coursesBanner coursesiit">
 			<!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
 			<span class="h1andh2">
 				<h1 class="headh1h2"><b>COURSES</b></h1>
@@ -144,7 +144,7 @@
 
 		<section class="hexMain">
 			<div class="hex1 bg1">
-				<img src="../images/courses/heximg1.png" alt="" />
+				<img src="../images/courses/iitmed.png" alt="" />
 				<div class="hexBox">
 					<h1 class="hexTitle">STUDENTS</h1>
 					<p class="hexContent paraIIT">
