--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -628,7 +628,7 @@
 		<%- include('./layout/header') %>
 
 		<!--courses Neet-->
-		<section class="coursesneet">
+		<section class="coursesBanner coursesjee">
 			<!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
 			<span class="h1andh2">
 				<h1 class="headh1h2"><b>COURSES</b></h1>
@@ -645,13 +645,13 @@
 
 		<section class="hexMain">
 			<div class="hex1 bg1">
-				<img src="../images/courses/heximg11.png" alt="" />
+				<img src="../images/courses/jee1.png" alt="" />
 				<div class="hexBox hexBox2">
 					<h1 class="hexTitle">Two-year course</h1>
 					<p class="hexContent para1JEE">
 						This course is meant for students who have completed their 10th std
 						board exams. The course will start at their 11th std and will be
-						conducted till their JEE exam. Course Methodology
+						conducted till their JEE exam.
 					</p>
 					<button class="neet1btn">Read more</button>
 				</div>
@@ -659,7 +659,7 @@
 		</section>
 		<section class="hexMain">
 			<div class="hex1 hex2 bg2">
-				<img src="../images/courses/heximg2.png" alt="" />
+				<img src="../images/courses/jee2.png" alt="" />
 				<div class="hexBox">
 					<h1 class="hexTitle">One-year course</h1>
 					<p class="hexContent para2JEE">
@@ -672,7 +672,7 @@
 		</section>
 		<section class="hexMain">
 			<div class="hex1 bg3">
-				<img src="../images/courses/heximg3.png" alt="" />
+				<img src="../images/courses/jee3.png" alt="" />
 				<div class="hexBox hexBox2">
 					<h1 class="hexTitle">Crash course</h1>
 					<p class="hexContent para3JEE">
