--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -866,7 +866,7 @@
 		<%- include('./layout/header') %>
 
 		<!--courses Neet-->
-		<section class="coursesneet">
+		<section class="coursesBanner coursesneet">
 			<!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
 			<span class="h1andh2">
 				<h1 class="headh1h2"><b>COURSES</b></h1>
