--- a/views/home.ejs
+++ b/views/home.ejs
@@ -80,7 +80,7 @@
 									<p>
 										Admissions open for NEET Repeater 2022 New batch <a href="/contactus">JOIN NOW
 										</a> &nbsp;
-										&ensp; Enroll yourself <a href="/contactus">ji</a> for NEET Repeater 2022 Scholarship Test
+										&ensp; Enroll yourself for NEET Repeater 2022 Scholarship Test
 										<a href="/contactus">JOIN NOW</a>&nbsp; &ensp; Admissions open for NEET/JEE
 										Long-term course (1year & 2 year)
 										!<a href="/contactus">JOIN NOW</a>
@@ -92,7 +92,7 @@
 					<!-- </section> -->
 					<section class="sec-2">
 						<div class="div-2">
-							<h1 class="div-2-title">Latest Updates</h1>
+							<h1 class="div-2-title">LATEST UPDATES</h1>
 
 							<marquee class="news-box" direction="up" scrollamount="5" onmouseover="this.stop();"
 								onmouseout="this.start();">
@@ -107,7 +107,7 @@
 							</marquee>
 						</div>
 						<div class="div-1">
-							<h1 class="CalanderEvents">Calendar Events</h1>
+							<h1 class="CalanderEvents">CALENDER EVENTS</h1>
 							<div class="calenderMain">
 
 								<% calendar.forEach(cal=> { %>
@@ -129,58 +129,7 @@
 						</div>
 					</section>
 					<section class="HexagonDiv" id="courses">
-						<!-- <div class="left">
-			<div class="spilldiv">
-				<img class="spill " src="images/home/spill.png" alt="">
-			</div>
-			<div class="spilldiv1">
-				<img class="spill1" src="images/home/spill1.png" alt="">
-			</div>
-			<div class="spill2">
-				<img class="spill2" src="images/home/spill2.png" alt="">
-			</div>
-		</div> -->
-
-						<!-- <div class="right">
-			<div class="card1">
-				<img class="hexa1 hexa" src="images/home/hexa1.png" alt="">
-				<h3>NEET</h3>
-			</div>
-			<div class="card2">
-				<img class="hexa2 hexa" src="images/home/hexa2.png" alt="">
-				<h3>IIT & Medical<br>Foundation</h3>
-			</div>
-			<div class="card3">
-				<img class="hexa3 hexa" src="images/home/hexa3.png" alt="">
-				<h3>IIT-JEE</h3>
-			</div>
-		</div>  -->
-
-						<!-- <div class="cardsDiv">
-			<div class="box1">
-					<img class="hexaimg" src="images/home/hexa1.png" alt="">
-					
-						<h3 class="imgHeader">IIT-JEE</h3>
 						
-						
-					
-			</div>
-			<div class="box2">
-					<img class="hexaimg" src="images/home/hexa2.png" alt="">
-					
-						<h3 class="imgHeader">IIT & Medical<br>Foundation</h3>
-						
-					
-			</div>
-			<div class="box3">
-					<img class="hexaimg" src="images/home/hexa3.png" alt="">
-					
-						<h3 class="imgHeader">NEET</h3>
-						
-					
-			</div> 
-		
-		</div>  -->
 
 						<div class="cardsDiv" id="courses">
 							<div class="box3">
@@ -212,29 +161,10 @@
 						</div>
 					</section>
 
-					<!-- <section class="neet-toppers">
-		<h1>Our Toppers</h1>
-		<div class="topper-card-container">
-			<div class="topper-card">
-				<span class="topper-image_1"></span>
-				<div class="topper-details">
-					<h2>Sreya PriyaDharshini.G</h2>
-					<p>Neet score</p>
-					<p>644/720</p>
-				</div>
-		</div>
-			<div class="topper-card">
-				<span class="topper-image_2"></span>
-				<div class="topper-details">
-					<h2>Sharulata P</h2>
-					<p>Neet score</p>
-					<p>644/720</p>
-				</div>
-			</div>
-	</section> -->
+				
 					<div class="neet-2020-toppers">
 
-						<!-- <img src="images/home/Vector.svg" alt="SVG" /> -->
+						
 						<div class="neet-2020-toppers-a">
 							<p>Our Results - Neet Toppers</p>
 							<img src="https://img.icons8.com/plumpy/50/000000/sparkling--v2.png"
@@ -242,31 +172,10 @@
 						</div>
 
 
-						<!-- <iframe class='ribbon' src="https://giphy.com/embed/3ohhwzIw3bISRhQWME" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/explosion-confetti-3ohhwzIw3bISRhQWME"></a></p> -->
+						
 					</div>
 					<marquee behavior="" direction="left"></marquee>
-					<!-- <section class="swiper swiper1 mySwiper1">
-						<div class="swiper-wrapper">
-							<% ourtoppers.forEach(topper=> { %>
-								<div class="swiper-slide">
-									<img class="profile" src="<%= topper.studentimg %>" alt="" />
-									<div class="toppersDiv">
-										<p class="markNew">
-											<%= topper.score %> / 720
-										</p>
-										<p class="nameNew">
-											<%= topper.name %>
-										</p>
-										<p class="colNew">
-											<%= topper.collegename %>
-										</p>
-									</div>
-								</div>
-								<% }) %>
-						</div>
-
-
-					</section> -->
+					
 					<div class="swiper-container">
 						<div class="swiper mySwiper swipTop">
 							<div class="swiper-wrapper">
@@ -293,32 +202,13 @@
 							<div class="swiper-button-prev btnPrev"></div>
 						 
 					</div>
-					<!-- <div class="swiper-button-next arrownext1"></div>
-					<div class="swiper-button-prev arrowprev1"></div> -->
+					
 
 
 
 
 					<section class="stats">
-						<!-- <div class="stats-details">
-					
-					<div class="stat1 stat">
-						<h1 class="counter MBBS_Seats" data-count=345>345%</h1>
-						<h3>MBBS Seats through Neet</h3>
-					</div>
-					<div class="stat2 stat">
-						<h1 class="counter Consecutive" data-count=4>4%</h1>
-						<h3>Consecutive years of District first in Salem</h3>
-					</div>
-					<div class="stat3 stat">
-						<h1 class="counter successRate" data-count=90>90%</h1>
-						<h3>Success rate in NEET</h3>
-					</div>
-					<div class="stat4 stat">
-						<h1 class="counter admission" data-count=15>15%</h1>
-						<h3>NIT & IIST Admissions</h3>
-					</div>
-				</div> -->
+						
 						<div class="statBox" id="counter">
 							<% neetachieve.forEach(neetfor => { %>
 							<div class="Stat">
@@ -368,26 +258,7 @@
 						  <div class="swiper-button-prev btnPrev2"></div>
 						</div>
 						
-					<!-- <section class="testimonials_container"> -->
-						<!-- <div class="swiper swiper2 mySwiper2">
-							<h1 class="studentsh1">STUDENTS TESTIMONIALS</h1>
-							<div class="swiper-wrapper">
-								<% stutest.forEach(link=> { %>
-									<div class="swiper-slide">
-										<div class="testimonials">
-											<iframe class="video" src="<%= link %>" title="YouTube video player"
-												frameborder="0"
-												allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-												allowfullscreen></iframe>
-										</div>
-									</div>
-									<% }) %>
-							</div>
-
-						</div> -->
-						<!-- <div class="swiper-button-next arrownext2"></div>
-						<div class="swiper-button-prev arrowprev2"></div> -->
-					<!-- </section> -->
+				
 
 					<%- include('./layout/footer') %>
 	</div>
