--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -15,17 +15,25 @@ body.dark .methodology3,
 body.dark .methodology4 {
 	color: black !important;
 }
-
 .coursesneet {
+
+	background: url('../images/courses/neet.jpg') center/cover;
+}
+.coursesBanner {
 	width: 100%;
 	height: 90vh;
-	background: url('../images/courses/neet.jpg') center/cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 	position: relative;
+}
+.coursesjee {
+	background: url('../images/courses/jee.jpg') center/cover;
+}
+.coursesiit {
+	background: url('../images/courses/iitmedical.jpg') center/cover;
 }
 /*Heading*/
 .h1andh2 {
@@ -34,7 +42,9 @@ body.dark .methodology4 {
 .headh1h2 {
 	padding: 0.5% 0;
 }
-
+body.dark .headh1h2 {
+	color: rgb(0, 0, 0) ;
+}
 .coursesneet h1 {
 	color: #568036;
 	font-size: 45px;
