--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -21,7 +21,7 @@ body.dark .methodology4 {
 }
 .coursesBanner {
 	width: 100%;
-	height: 90vh;
+	height: calc(100vh - 4rem);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	display: flex;
