--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,7 +73,7 @@
 
 							</div>
 							<div class="scroll">
-								<marquee class="marqueetext" vspace="30%" scrollamount="5" scrollamount="5" onmouseover="this.stop();"
+								<marquee class="marqueetext" vspace="30%" scrollamount="5" scrollamount="5" onmousedown='' onmouseup='' onmouseover="this.stop();"
 								onmouseout="this.start();">
 									<p>
 										Admissions open for NEET Repeater 2022 New batch <a href="/contactus">JOIN NOW
@@ -91,7 +91,7 @@
 						<div class="div-2">
 							<h1 class="div-2-title">LATEST UPDATES</h1>
 
-							<marquee class="news-box" direction="up" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();"
+							<marquee class="news-box" direction="up" scrollamount="5" onmousedown='' onmouseup='' onmouseover="this.stop();" onmouseout="this.start();"
 								onmouseout="this.start();">
 								<% latestupdates.forEach(update=> { %>
 									<span class="p">
