--- a/views/home.ejs
+++ b/views/home.ejs
@@ -91,8 +91,7 @@
 						<div class="div-2">
 							<h1 class="div-2-title">LATEST UPDATES</h1>
 
-							<marquee class="news-box" direction="up" scrollamount="5" onmousedown='' onmouseup='' onmouseover="this.stop();" onmouseout="this.start();"
-								onmouseout="this.start();">
+							<marquee class="news-box" direction="up" scrollamount="5" onmousedown='' onmouseup='' onmouseover="this.stop();" onmouseout="this.start();">
 								<% latestupdates.forEach(update=> { %>
 									<span class="p">
 										<%= update.link %>
