--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -1,58 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="shortcut icon"
+			href="images/home/classic-nee-tacademy-logo.png"
+			type="image/x-icon"
+		/>
+		<link rel="stylesheet" href="stylesheets/demovideos.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
-	<link rel="stylesheet" href="stylesheets/demovideos.css" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-	<link rel="stylesheet" href="stylesheets/chatbot.css" />
+		<title>Demo Videos</title>
+		<style>
+			.Demovideosnav {
+				background-color: #60efff;
+				border-radius: 0% 50% 0% 50%;
+				color: rgb(0, 0, 0);
+			}
+		</style>
+	</head>
 
-	<title>Demo Videos</title>
-	<style>
-		.Demovideosnav{
-			background-color: #60efff;
-			border-radius: 0% 50% 0% 50%;
-            color: rgb(0, 0, 0);
-		}
-	</style>
-</head>
+	<body>
+		<%- include('./layout/header') %> <%- include('./chatbot') %>
 
-<body>
-	<%- include('./layout/header') %>
-		<%- include('./chatbot') %>
+		<section class="Getyourvideos">
+			<img src="<%= img.sliderimg %>" alt="" />
+		</section>
+		<div class="heading"><h1>Demo Videos</h1></div>
 
-			<section class="Getyourvideos"> 
-				<img src="<%= img.sliderimg %>" alt="">
-			</section>
-			<div class="heading"> <h1>Demo Videos
-			</h1></div>
-			
-			
-				
-				<div class="grid">
-					<% link.forEach((link,index)=> { %>
-						<div class="griditem">
-							<div class="gridbox">
-								<iframe class="video" src="<%= link %>" title="YouTube video player" frameborder="0"
-									allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-									allowfullscreen></iframe>
-							</div>
-						</div>
-					<% }) %>
+		<div class="grid">
+			<% link.forEach((link,index)=> { %>
+			<div class="griditem">
+				<div class="gridbox">
+					<iframe
+						class="video"
+						src="<%= link %>"
+						title="YouTube video player"
+						frameborder="0"
+						allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen
+					></iframe>
 				</div>
-			
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-				integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-				crossorigin="anonymous"></script>
-			<script src="javascripts/nav.js"></script>
-			<script src="../javascripts/courses.js"></script>
-			<script src="../javascripts/common.js"></script>
-			<%- include('./layout/footer') %>
-			<script src="javascripts/chatbot.js"></script>
-</body>
+			</div>
+			<% }) %>
+		</div>
 
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
+		<script src="javascripts/nav.js"></script>
+		<script src="../javascripts/courses.js"></script>
+		<script src="../javascripts/common.js"></script>
+		<%- include('./layout/footer') %>
+		<script src="javascripts/chatbot.js"></script>
+	</body>
 </html>
