--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -85,7 +85,7 @@
 						</div>
 						<div class="input-group flex-nowrap" style="width: 80%">
 							<span class="input-group-text" id="addon-wrapping"
-								>Add CollegeName</span
+								>Add College name</span
 							>
 							<input
 								type="text"
@@ -94,7 +94,6 @@
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
-								required
 							/>
 						</div>
 						<div>
