--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -152,7 +152,7 @@
                     id="checkbox"
                     class="updatesCheckbox"
                     name="checkbox"
-                    value="<%= i.year %>"
+                    value="<%= i.content %>"
                     style="height: 20px; width: 20px"
                   />
                 </td>
