--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -91,7 +91,7 @@
 					
 				
 				</div>
-				<div class="footer-last">@Copyright Classic Neet Academy 2021</div>
+				<div class="footer-last">&copy; Copyright Classic Neet Academy 2021</div>
 				
 			</div>
 		</footer>
