--- a/public/stylesheets/chatbot.css
+++ b/public/stylesheets/chatbot.css
@@ -181,12 +181,20 @@
 	right: -3rem;
 }
 
+.chat-body .each-chat.client button {
+	width: 2.5rem;
+	height: 2.5rem;
+	position: absolute;
+	background: transparent;
+	left: -2.5rem;
+	border: none;
+}
+
 .chat-body .each-chat.client svg {
 	width: 2.5rem;
 	height: 2.5rem;
 	transform: rotate(180deg);
-	left: 0rem;
-	position: absolute;
+	position: static;
 }
 
 .chat-body .each-chat.client > span {
@@ -201,8 +209,8 @@
 	justify-content: center;
 	align-items: center;
 	height: auto !important;
-	
-	padding: .5rem 0rem;
+
+	padding: 0.5rem 0rem;
 }
 
 .chat-body .stream {
