--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -18,8 +18,8 @@
 			<img src="../images/chatbot/chatbot1.png" alt="" />
 			<span class="chat-span">Enter your name</span>
 		</div>
-		<div class="each-chat client">
-			<span>
+		<form class="each-chat client name-form">
+			<button>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					viewBox="0 0 20 20"
@@ -32,7 +32,7 @@
 						clip-rule="evenodd"
 					/>
 				</svg>
-			</span>
+			</button>
 			<input
 				type="text"
 				placeholder="Name"
@@ -42,7 +42,7 @@
 				required
 				id="client_name"
 			/>
-		</div>
+		</form>
 	</div>
 	<div class="chat-footer">
 		<a href="/Aboutus">About us</a>
