--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -54,12 +54,11 @@
 							<input
 								type="date"
 								name="date"
-								class="form-control"
+								class="form-control year"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
-								minlength="10"
-								maxlength="150"
+								
 								required
 							/>
 						</div>
@@ -149,7 +148,7 @@
 				</form>
 			</div>
 		</section>
-		<script src="../../javascripts/admin/home/latestUpdates.js"></script>
+		<script src="../../javascripts/admin/home/calendarevents.js"></script>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
