--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -111,12 +111,11 @@
               <input
                 type="number"
                 name="year"
-                class="form-control"
+                class="form-control year"
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
                 min="2010"
-                max="2030"
               />
             </div>
             <div>
