--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -114,7 +114,7 @@
 										id="checkbox"
 										class="updatesCheckbox"
 										name="checkbox"
-										value="<%= i.link %>"
+										value="<%= i.link1 %>"
 										style="height: 20px; width: 20px"
 									/>
 								</td>
