--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -94,9 +94,13 @@
             </tbody>
           </table>
           <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4">
-              Add
-            </button>
+            <% if (link.length<9) { %>
+							<button type="button" class="btn btn-outline-primary addbtn px-4">
+								Add
+							</button>
+						<% }else{ %>
+							<p class="text-danger d-flex justify-content-center align-items-center">You have reached your limit</p> 
+						<% } %> 
             <button
               type="button"
               disabled
