--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -91,8 +91,8 @@
                 aria-label="year"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
-                min="2000"
-                max="3000"
+                min="2010"
+                
                 required
               />
             </div>
@@ -152,7 +152,7 @@
                     id="checkbox"
                     class="updatesCheckbox"
                     name="checkbox"
-                    value="<%= i.content %>"
+                    value="<%= i.content%>,<%= i.year %>"
                     style="height: 20px; width: 20px"
                   />
                 </td>
