--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -31,7 +31,7 @@
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
-			<div class="right" style=" height: 100vh;"> 
+			<div class="right" style="height: 100vh">
 				<form
 					action="/admin/sliderrevolution"
 					method="post"
@@ -78,7 +78,7 @@
 										value="<%= i.cloudinaryName %>"
 										style="height: 20px; width: 20px"
 									/>
-								</td>	
+								</td>
 							</tr>
 							<% }) %>
 						</tbody>
