--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -68,7 +68,7 @@
 						<thead>
 							<tr>
 								<th scope="col">Current Link</th>
-								<th scope="col">Updates</th>
+								<th scope="col">Update</th>
 							</tr>
 						</thead>
 						<tbody>
