--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -19,7 +19,7 @@
 			<img src="../images/chatbot/chatbot1.png" alt="" />
 			<span class="chat-span">Enter your name</span>
 		</div>
-		<form class="each-chat client name-form">
+		<form class="each-chat client name-form" onsubmit="nameFormSubmit()">
 			<button>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
