--- a/views/admin/chatbot/chatbot.ejs
+++ b/views/admin/chatbot/chatbot.ejs
@@ -34,7 +34,7 @@
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right" style="height: fit-content">
-				<h1 class="m-5">Student Details</h1>
+				<h1 class="m-5">Chat Bot</h1>
 
 				<table class="table" style="width: 70%">
 					<thead>
