--- a/views/admin/chatbot/chatbot.ejs
+++ b/views/admin/chatbot/chatbot.ejs
@@ -42,6 +42,7 @@
 							<th scope="col">Name</th>
 							<th scope="col">Phonenumber</th>
 							<th scope="col">Email</th>
+							<th scope="col">Delete</th>
 						</tr>
 					</thead>
 					<tbody class="tbody"></tbody>
@@ -72,7 +73,7 @@
 					<div class="buttondiv">
 						<button
 							type="button"
-							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+							class="btn btn-outline-danger submit mt-3 submitbtn"
 						>
 							Empty Response
 						</button>
