--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -147,7 +147,7 @@
           selected="<%=i==0?true:false%>"
           data-year="<%= folder %>"
         >
-          <%= folder %>
+         NEET <%= folder %>
         </option>
         <% }) %>
       </select>
