--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,7 +96,7 @@
 								<% latestupdates.forEach(update=> { %>
 									<span class="p">
 										<%= update.link %>
-										<% if (!update.link1=='no content') { %>
+										<% if (!(update.link1=='no link')) { %>
 											<a  href="<%= update.link1 %>" target="_blank">
 												-Click here
 											</a>
